[gd_scene load_steps=2 format=3 uid="uid://cfa8kl2nq5gx4"]

[ext_resource type="Script" path="res://src/entities/facility/Facility.gd" id="1_facility"]

[node name="Facility" type="Node2D"]
script = ExtResource("1_facility")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="RepairTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]
one_shot = true
